# esp32-d1r32-tds-ds18b20-rust

./: Cargo.toml  README.md  run.sh
.cargo/: config.toml
docs/: draw_wiring.py
src/: main.rs
