[package]
name = "esp32-d1r32-tds-ds18b20"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
esp-hal       = { version = "1.1.1", features = ["esp32", "unstable"] }
esp-backtrace = { version = "0.19.0", features = ["esp32", "panic-handler", "println"] }
esp-println   = { version = "0.17.0", features = ["esp32", "log-04"] }
log           = "0.4"
nb            = "1.1"

[profile.dev]
opt-level = "s"
lto       = "off"

[profile.release]
codegen-units = 1
debug         = 2
debug-assertions = false
incremental   = false
lto           = "fat"
opt-level     = "s"
overflow-checks = false
